# OCR-Lain

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/ocr_lain/: cli.py  config.py  core.py  models.py  ocr_engine.py  outputs.py  preprocess.py  router.py
src/ocr_lain.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ocr_lain/extractors/: base.py  docx_extractor.py  image_extractor.py  pdf_extractor.py  pptx_extractor.py
