[project]
name = "ocr-lain"
version = "0.1.0"
description = "OCR-Lain: ferramenta para extrair texto de imagens e documentos usando OCR."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pillow",
    "pytesseract",
    "typer",
    "rich"
]

[project.scripts]
ocr-lain = "ocr_lain.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"